syntax = "proto3";
option optimize_for = CODE_SIZE;

service HelloRpc {
  rpc sayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string myName = 1;
  }
  
message HelloResponse {
    string greeting = 1;
  }